--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en-US">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width-device-width,
-initial scale-1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Kasee Knnedy|WDD130</title>
 </head>
 <body>
