fix: correct typo in introduction paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <h1>Kasee Kennedy | WDD 130</h1>
         <img src="images/profile.jpg" alt="Kasee Kennedy" width="200">
-    <p>Hello, M name is Kasee Kennedy. I'm from Liberia. I enjoy watching movies and playing video games. 
+    <p>Hello, My name is Kasee Kennedy. I'm from Liberia. I enjoy watching movies and playing video games. 
         I'm excited to be learning this course and I look forward to creating standard web pages. </p>
     </main>
     <footer>
