--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <link rel="stylesheet" href="styles/styles.css">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Kasee Knnedy|WDD130</title>
+<meta name="description" content="Kasee Kennedy's personal webpage for WDD 130.">
+<meta name="author" content="Kasee Kennedy">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -19,6 +21,11 @@
     <p>Hello, My name is Kasee Kennedy. I'm from Liberia. I enjoy watching movies and playing video games. 
         I'm excited to be learning this course and I look forward to creating standard web pages. </p>
     </main>
+    <aside>
+        <h2>Paynesville, Liberia</h2>
+        <img src="images/Liberia.jpg" alt="Liberia" width="200">
+        <p>Paynesville is a city in Liberia, known for being the first independent nation in Africa. It is located on th west coast of Africa</p>
+    </aside>
     <footer>
         <p>©2025 ☘ Kasee Kennedy ☘ Liberia</p>
     </footer>
