--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Kasee Knnedy|WDD130</title>
 <meta name="description" content="Kasee Kennedy's personal webpage for WDD 130.">
 <meta name="author" content="Kasee Kennedy">
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
     </main>
     <aside>
         <h2>Paynesville, Liberia</h2>
-        <img src="images/Liberia.jpg" alt="Liberia" width="200">
+        <img src="images/LIBN.jpg" alt="Liberia" width="200">
         <p>Paynesville is a city in Liberia, known for being the first independent nation in Africa. It is located on th west coast of Africa</p>
     </aside>
     <footer>
