--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </main>
     <aside>
         <h2>Paynesville, Liberia</h2>
-        <img src="images/LIBN.jpg" alt="Liberia" width="200">
+        <img src="images/libn.jpg" alt="Liberia" width="200">
         <p>Paynesville is a city in Liberia, known for being the first independent nation in Africa. It is located on th west coast of Africa</p>
     </aside>
     <footer>
