--- a/wwr/about.html
+++ b/wwr/about.html
@@ -29,7 +29,7 @@
             <h1>Tides</h1>
             <article>
                 <img src="/wwr/images/hemployee.webp" alt="" width="100">
-            <p>Welcome to our rafting website! We are passionate about providing thrilling and safe rafting experiences for adventurers of all levels. Our team is dedicated to ensuring you have an unforgettable time on the water.</p>
+            <p>Welcome to our Tide's rafting website! We are passionate about providing thrilling and safe rafting experiences for adventurers of all levels. Our team is dedicated to ensuring you have an unforgettable time on the water.</p>
             <p>Whether you're a seasoned rafter or a first-timer, we have the perfect trip for you. Join us for an adventure that combines excitement, nature, and camaraderie.</p>
             </article>
         </div>
@@ -49,5 +49,19 @@
             <img src="/wwr/images/raft.jpg" alt="" width="100">
             </section>
     </main>
+    <footer>
+        <p>©2025 Tides | Kasee Kennedy</p>
+        <nav class="socialmedia">
+            <a href="https://www.facebook.com" >
+            <img src="/wwr/images/fbic.webp" alt="Facebook Icon" width="20">
+            </a>
+            <a href="https://www.twitter.com" >Twitter
+            <img src="/wwr/images/twiic.webp" alt="Twitter Icon" width="20">
+            </a>
+            <a href="https://www.instagram.com" >
+            <img src="/wwr/images/instaic.webp" alt="Instagram Icon" width="20">
+            </a>
+            </nav>
+        
 </body>
 </html>
