--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,54 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="About Page" content="Wrafting About-page.">
-    <meta name="Kasee Kennedy" content="About Page">
-    <link rel="stylesheet" href="/wwr/styles/rafting.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
-    <title>About Page</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Rapids About-page.">
+  <meta name="author" content="Kasee Kennedy">
+  <link rel="stylesheet" href="/wwr/styles/rafting.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
+  <title>About Page</title>
 </head>
 <body>
-    <header>
-        <img src="/wwr/images/logo.jpeg" alt="Rafting Logo" width="100">
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Trips</a>
-            <a href="#">Contact</a>
-        </nav>
-    </header>
-    <main>
-        <main>
+  <header>
+    <img src="/wwr/images/logo.jpeg" alt="Rafting Logo" width="100">
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Trips</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <main>
     <div class="hero">
       <img src="/wwr/images/hero.jpg" alt="Rafting Adventure Background">
       <h1>Rapids.</h1>
       <article>
+        <h2>Welcome to Rapids</h2>
         <img src="/wwr/images/hemployee.webp" alt="Rafting Employee" width="200">
-        <p> Rapids is a premier white water rafting company dedicated to providing unforgettable adventures on the river. With experienced guides and top-notch equipment, we ensure safety and excitement for all our guests. Whether you're a seasoned rafter or a first-timer, we have the perfect trip for you. Join us for an adventure of a lifetime!</p>    
+        <p>
+          Rapids is a premier white water rafting company dedicated to providing unforgettable adventures on the river...
+        </p>
       </article>
     </div>
 
     <section>
       <h2>History</h2>
-      <p> 
-Rapids was founded in 2010 by a group of passionate outdoor enthusiasts who wanted to share their love for white water rafting with others. Over the years, we have grown into a leading rafting company, offering a wide range of trips and experiences for adventurers of all skill levels. Our commitment to safety, environmental stewardship, and customer satisfaction has made us a trusted name in the industry.</p>
+      <p>
+        Rapids was founded in 2010 by passionate outdoor enthusiasts. Our growth is rooted in safety, stewardship, and satisfaction.
       </p>
     </section>
 
     <section>
       <h2>Adventure Awaits You!</h2>
-      <img src="/wwr/images/rafting5.webp" alt="Rafting Image 1">
-      <img src="/wwr/images/raft.jpg" alt="Rafting Image 2">
-      <img src="/wwr/images/rafting 1.jpg" alt="Rafting Image 3">
-      <img src="/wwr/images/rafting3.jpg" alt="Rafting Image 4">
-      <img src="/wwr/images/rafting4 (1).jpg" alt="Rafting Image 5">
+      <img src="/wwr/images/rafting5.webp" alt="Rafting Adventure" width="300">
+      <img src="/wwr/images/raft.jpg" alt="Rafting Adventure" width="300">
+      <img src="/wwr/images/rafting1.jpg" alt="Rafting Adventure" width="300">
+      <img src="/wwr/images/rafting3.jpg" alt="Rafting Adventure" width="300">
+      <img src="/wwr/images/rafting4.jpg" alt="Rafting Adventure" width="300">
     </section>
   </main>
     <footer>
@@ -64,6 +65,7 @@ Rapids was founded in 2010 by a group of passionate outdoor enthusiasts who want
             <img src="/wwr/images/instaic.webp" alt="Instagram Icon" width="20">
             </a>
             </nav>
+    </footer>
         
 </body>
 </html>
