--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,10 +16,10 @@
   <header>
     <img src="/wwr/images/logo.jpeg" alt="Rafting Logo" width="100">
     <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Trips</a>
-      <a href="#">Contact</a>
+      <a href="Index.html">Home</a>
+      <a href="About.html">About</a>
+      <a href="Trips">Trips</a>
+      <a href="Contacts">Contact</a>
     </nav>
   </header>
 
