--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Rapids About-page.">
   <meta name="author" content="Kasee Kennedy">
-  <link rel="stylesheet" href="/wwr/styles/rafting.css">
+  <link rel="stylesheet" href="styles/rafting.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet">
