--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <header>
-    <img src="/wwr/images/logo.jpeg" alt="Rafting Logo" width="100">
+    <img src="images/logo.jpeg" alt="Rafting Logo" width="100">
     <nav>
       <a href="Index.html">Home</a>
       <a href="About.html">About</a>
@@ -25,11 +25,11 @@
 
   <main>
     <div class="hero">
-      <img src="/wwr/images/hero.jpg" alt="Rafting Adventure Background">
+      <img src="images/hero.jpg" alt="Rafting Adventure Background">
       <h1>Rapids.</h1>
       <article>
         <h2>Welcome to Rapids</h2>
-        <img src="/wwr/images/hemployee.webp" alt="Rafting Employee" width="200">
+        <img src="images/hemployee.webp" alt="Rafting Employee" width="200">
         <p>
           Rapids is a premier white water rafting company dedicated to providing unforgettable adventures on the river...
         </p>
@@ -45,24 +45,24 @@
 
     <section>
       <h2>Adventure Awaits You!</h2>
-      <img src="/wwr/images/rafting5.webp" alt="Rafting Adventure" width="300">
-      <img src="/wwr/images/raft.jpg" alt="Rafting Adventure" width="300">
-      <img src="/wwr/images/rafting1.jpg" alt="Rafting Adventure" width="300">
-      <img src="/wwr/images/rafting3.jpg" alt="Rafting Adventure" width="300">
-      <img src="/wwr/images/rafting4.jpg" alt="Rafting Adventure" width="300">
+      <img src="images/rafting5.webp" alt="Rafting Adventure" width="300">
+      <img src="images/raft.jpg" alt="Rafting Adventure" width="300">
+      <img src="images/rafting1.jpg" alt="Rafting Adventure" width="300">
+      <img src="images/rafting3.jpg" alt="Rafting Adventure" width="300">
+      <img src="images/rafting4.jpg" alt="Rafting Adventure" width="300">
     </section>
   </main>
     <footer>
         <p>©2025 Rapids | Kasee Kennedy</p>
         <nav class="socialmedia">
             <a href="https://www.facebook.com" >
-            <img src="/wwr/images/fbic.webp" alt="Facebook Icon" width="20">
+            <img src="images/fbic.webp" alt="Facebook Icon" width="20">
             </a>
             <a href="https://www.twitter.com" >
-            <img src="/wwr/images/twiic.webp" alt="Twitter Icon" width="20">
+            <img src="images/twiic.webp" alt="Twitter Icon" width="20">
             </a>
             <a href="https://www.instagram.com" >
-            <img src="/wwr/images/instaic.webp" alt="Instagram Icon" width="20">
+            <img src="images/instaic.webp" alt="Instagram Icon" width="20">
             </a>
             </nav>
     </footer>
