--- a/wwr/about.html
+++ b/wwr/about.html
@@ -17,10 +17,10 @@
     <img src="images/logo.jpeg" alt="Rafting Logo" width="100">
     <nav>
       <ul>
-        <li><a href="Index.html">Home</a></li>
-        <li><a href="About.html">About</a></li>
-        <li><a href="Trips">Trips</a></li>
-        <li><a href="Contacts">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="trips">Trips</a></li>
+        <li><a href="contacts">Contact</a></li>
         </ul>
     </nav>
   </header>
