--- a/wwr/about.html
+++ b/wwr/about.html
@@ -19,8 +19,8 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="trips">Trips</a></li>
-        <li><a href="contacts">Contact</a></li>
+        <li><a href="trips.html">Trips</a></li>
+        <li><a href="contacts.html">Contact</a></li>
         </ul>
     </nav>
   </header>
