--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Rapids Home-page.">
+  <meta name="description" content="Rapids Trips-page.">
   <meta name="author" content="Kasee Kennedy">
   <link rel="stylesheet" href="styles/rafting.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
-  <title>Home Home-page</title>
+  <title> Trips-page</title>
 </head>
 <body>
   <header>
@@ -20,7 +20,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="trips.html">Trips</a></li>
-        <li><a href="contacts.html">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
   </header>
@@ -112,7 +112,6 @@
 
             <a href="https://wireframe.cc/XH6WAr"> Wireframe </a>
                 
-            </a>
     </footer>
   </body>
 
